agregando manejo de errores BusinessException, GlobalException
